--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "firebase": "^5.0.2",
     "material-design-icons-iconfont": "^3.0.3",
+    "serve-static": "^1.13.2",
     "vue": "^2.5.2",
     "vue-google-autocomplete": "^1.1.0",
     "vue-router": "^3.0.1",
