Add server file

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "unit": "jest --config test/unit/jest.conf.js --coverage",
         "e2e": "node test/e2e/runner.js",
         "test": "npm run unit && npm run e2e",
-        "build": "node build/build.js"
+        "build": "node webpack/build.js"
     },
     "dependencies": {
         "express": "^4.16.3",
